--- a/Intensivo-IA/package.json
+++ b/Intensivo-IA/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "intensivo-ia",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^4.4.5"
-  }
+	"name": "intensivo-ia",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite"
+	},
+	"devDependencies": {
+		"vite": "^4.4.5"
+	}
 }
