--- a/Intensivo-IA/package.json
+++ b/Intensivo-IA/package.json
@@ -4,9 +4,16 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"server": "node --watch --no-warnings server/index.js",
 		"dev": "vite"
 	},
 	"devDependencies": {
 		"vite": "^4.4.5"
+	},
+	"dependencies": {
+		"axios": "^1.5.0",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"ytdl-core": "4.10.0"
 	}
 }
